--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Ignore Copilot instructions but NOT workflows
+copilot-instructions
+!.github/
+!.github/workflows/
 # OSX
 #
 .DS_Store
@@ -65,6 +69,7 @@ buck-out/
 **/.factorypath
 .vscode
 
-.roo
-.cursor
-.github
+.roo/
+.cursor/
+.github/copilot-instructions.md
+!.github/workflows/
