fix: ensure service stops correctly on task removal and improve comments

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
           android:name="com.imxiqi.rnliveaudiostream.RNLiveAudioStreamService"
           android:enabled="true"
           android:exported="false"
+          android:stopWithTask="true"
           android:foregroundServiceType="microphone" />
     </application>
 </manifest>
