--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,11 @@ buck-out/
 .cursor/
 .github/copilot-instructions.md
 !.github/workflows/
+.clinerules/byterover-rules.md
+.kilocode/rules/byterover-rules.md
+.roo/rules/byterover-rules.md
+.windsurf/rules/byterover-rules.md
+.cursor/rules/byterover-rules.mdc
+.kiro/steering/byterover-rules.md
+.qoder/rules/byterover-rules.md
+.augment/rules/byterover-rules.md
