--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-live-audio-record",
-  "version": "1.1.6",
+  "version": "1.1.7-beta.0",
   "private": false,
   "description": "Get live audio recorder data for React Native",
   "license": "MIT",
